<resources>
    <string name="app_name">Dynamic Responsive Login</string>
    <string name="main_activity_text_head">Lorem Ispum Lorem</string>
    <string name="main_activity_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="app_name2">My App</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>